{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 346,
  "lineage": "66cc2461-fd8f-8e68-c72a-c677b036efe9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921194331520:network-acl/acl-040e8fe86fe480563",
            "default_network_acl_id": "acl-040e8fe86fe480563",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-040e8fe86fe480563",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "921194331520",
            "subnet_ids": [
              "subnet-0f54d47c0c2cfd1fb",
              "subnet-0fb82a3deac095c92"
            ],
            "tags": {
              "Name": "DU-blue-default-network-acl"
            },
            "tags_all": {
              "Name": "DU-blue-default-network-acl"
            },
            "vpc_id": "vpc-0ad142c58ea750541"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.du_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921194331520:security-group/sg-0e9c6ee191e8c1b6d",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9c6ee191e8c1b6d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "921194331520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DU-blue-default-security-group"
            },
            "tags_all": {
              "Name": "DU-blue-default-security-group"
            },
            "vpc_id": "vpc-0ad142c58ea750541"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.du_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07599489bd0a329ed",
            "association_id": "eipassoc-0359275b4b7acb2a8",
            "domain": "vpc",
            "id": "eipalloc-07599489bd0a329ed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05a925b01271ae3b8",
            "private_dns": "ip-10-0-0-42.ec2.internal",
            "private_ip": "10.0.0.42",
            "public_dns": "ec2-52-73-59-88.compute-1.amazonaws.com",
            "public_ip": "52.73.59.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DU-blue-eip"
            },
            "tags_all": {
              "Name": "DU-blue-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.du_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0464d49b8794eba32",
            "arn": "arn:aws:ec2:us-east-1:921194331520:instance/i-0955513e74417dcbd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0955513e74417dcbd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0e807c2595d6936f5"
              }
            ],
            "primary_network_interface_id": "eni-0e807c2595d6936f5",
            "private_dns": "ip-10-0-0-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.100",
            "public_dns": "ec2-54-174-5-34.compute-1.amazonaws.com",
            "public_ip": "54.174.5.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bea115169c396936",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f54d47c0c2cfd1fb",
            "tags": {
              "Name": "DU-blue-ec2-bastion"
            },
            "tags_all": {
              "Name": "DU-blue-ec2-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e9c6ee191e8c1b6d"
            ]
          },
          "dependencies": [
            "aws_network_interface.nw_interface",
            "aws_subnet.subnet1",
            "aws_vpc.du_vpc",
            "data.aws_ami.amazon-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921194331520:internet-gateway/igw-0244d831f3347945e",
            "id": "igw-0244d831f3347945e",
            "owner_id": "921194331520",
            "tags": {
              "Name": "DU-blue-internet-gateway"
            },
            "tags_all": {
              "Name": "DU-blue-internet-gateway"
            },
            "vpc_id": "vpc-0ad142c58ea750541"
          },
          "dependencies": [
            "aws_vpc.du_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07599489bd0a329ed",
            "connectivity_type": "public",
            "id": "nat-0bc976fcdb48c939b",
            "network_interface_id": "eni-05a925b01271ae3b8",
            "private_ip": "10.0.0.42",
            "public_ip": "52.73.59.88",
            "subnet_id": "subnet-0f54d47c0c2cfd1fb",
            "tags": {
              "Name": "DU-blue-nat-gateway"
            },
            "tags_all": {
              "Name": "DU-blue-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.subnet1",
            "aws_vpc.du_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nw_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921194331520:network-interface/eni-0e807c2595d6936f5",
            "attachment": [
              {
                "attachment_id": "eni-attach-0e99fbe75d4bc013d",
                "device_index": 0,
                "instance": "i-0955513e74417dcbd"
              }
            ],
            "id": "eni-0e807c2595d6936f5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:fe:89:6e:76:5b",
            "owner_id": "921194331520",
            "private_dns_name": "ip-10-0-0-100.ec2.internal",
            "private_ip": "10.0.0.100",
            "private_ip_list": [
              "10.0.0.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e9c6ee191e8c1b6d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f54d47c0c2cfd1fb",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.subnet1",
            "aws_vpc.du_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921194331520:route-table/rtb-0e1b368f8dcd956d0",
            "id": "rtb-0e1b368f8dcd956d0",
            "owner_id": "921194331520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc976fcdb48c939b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DU-blue-route-table-private"
            },
            "tags_all": {
              "Name": "DU-blue-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad142c58ea750541"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.subnet1",
            "aws_vpc.du_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921194331520:route-table/rtb-060d97b4705a7cc59",
            "id": "rtb-060d97b4705a7cc59",
            "owner_id": "921194331520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0244d831f3347945e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DU-blue-route-table-public"
            },
            "tags_all": {
              "Name": "DU-blue-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad142c58ea750541"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.du_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08259eeca4438b214",
            "route_table_id": "rtb-060d97b4705a7cc59",
            "subnet_id": "subnet-0f54d47c0c2cfd1fb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.subnet1",
            "aws_vpc.du_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b1383f3903a9bae",
            "route_table_id": "rtb-0e1b368f8dcd956d0",
            "subnet_id": "subnet-0fb82a3deac095c92"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.rt_private",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.du_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921194331520:security-group/sg-041f38a575b4c7de2",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041f38a575b4c7de2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_host_SG",
            "name_prefix": "",
            "owner_id": "921194331520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DU-blue-bastion-security-group"
            },
            "tags_all": {
              "Name": "DU-blue-bastion-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad142c58ea750541"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.du_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921194331520:security-group/sg-02ed4041bb2165bdc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ed4041bb2165bdc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "DU-blue-lambda_sg",
            "name_prefix": "",
            "owner_id": "921194331520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DU-blue-lambda-security-group"
            },
            "tags_all": {
              "Name": "DU-blue-lambda-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad142c58ea750541"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.du_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921194331520:security-group/sg-048e3a57750bd1f30",
            "description": "RDS (terraform-managed)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048e3a57750bd1f30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "DU-blue-rds-sg",
            "name_prefix": "",
            "owner_id": "921194331520",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ad142c58ea750541"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.du_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921194331520:subnet/subnet-0f54d47c0c2cfd1fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f54d47c0c2cfd1fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "921194331520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DU-blue-subnet-public"
            },
            "tags_all": {
              "Name": "DU-blue-subnet-public"
            },
            "vpc_id": "vpc-0ad142c58ea750541"
          },
          "dependencies": [
            "aws_vpc.du_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921194331520:subnet/subnet-0fb82a3deac095c92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb82a3deac095c92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "921194331520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DU-blue-subnet-private"
            },
            "tags_all": {
              "Name": "DU-blue-subnet-private"
            },
            "vpc_id": "vpc-0ad142c58ea750541"
          },
          "dependencies": [
            "aws_vpc.du_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "du_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921194331520:vpc/vpc-0ad142c58ea750541",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-040e8fe86fe480563",
            "default_route_table_id": "rtb-0912a7e3b035af51b",
            "default_security_group_id": "sg-0e9c6ee191e8c1b6d",
            "dhcp_options_id": "dopt-1c616467",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ad142c58ea750541",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0912a7e3b035af51b",
            "owner_id": "921194331520",
            "tags": {
              "Name": "DU-blue-vpc"
            },
            "tags_all": {
              "Name": "DU-blue-vpc"
            }
          }
        }
      ]
    }
  ]
}